<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboardFragment"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_dashboard" />

    <item
        android:id="@+id/quickBillFragment"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/nav_quick_bill" />

    <item
        android:id="@+id/inventoryFragment"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/nav_inventory" />

    <item
        android:id="@+id/analyticsFragment"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/nav_analytics" />

    <item
        android:id="@+id/incomeLogFragment"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_income_log" />

</menu>
